<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:paddingStart="16dp"
            android:paddingTop="16dp"
            android:paddingBottom="5dp"
            android:text="@string/text_pick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:drawablePadding="13dp"
            android:visibility="gone"
            android:drawableTint="#bbb"
            android:paddingStart="13dp"
            android:drawableLeft="@drawable/ic_photo_library_black_24dp"
            android:background="?attr/selectableItemBackground"
            android:text="@string/album"
            android:textSize="16sp"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:id="@+id/tv_album" />

        <TextView
            android:drawablePadding="13dp"
            android:visibility="gone"
            android:drawableTint="#bbb"
            android:paddingStart="13dp"
            android:drawableLeft="@drawable/ic_insert_link_black_24dp"
            android:background="?attr/selectableItemBackground"
            android:text="@string/net_link"
            android:textSize="16sp"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:id="@+id/tv_link" />

        <TextView
            android:drawablePadding="13dp"
            android:paddingStart="13dp"
            android:drawableTint="#bbb"
            android:drawableLeft="@drawable/ic_insert_drive_file_grey_24dp"
            android:background="?attr/selectableItemBackground"
            android:text="@string/file"
            android:textSize="16sp"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:id="@+id/tv_file" />

        <TextView
            android:paddingStart="16dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_take_photo"
            android:drawablePadding="13dp"
            android:paddingStart="13dp"
            android:drawableLeft="@drawable/ic_add_a_photo_grey_24dp"
            android:background="?attr/selectableItemBackground"
            android:text="@string/take_a_photo"
            android:textSize="16sp"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="45dp" />

        <TextView
            android:drawablePadding="13dp"
            android:paddingStart="13dp"
            android:drawableTint="#bbb"
            android:drawableLeft="@drawable/ic_mic_black_24dp"
            android:background="?attr/selectableItemBackground"
            android:text="@string/sound_record"
            android:textSize="16sp"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:id="@+id/tv_record_sound" />

        <TextView
            android:drawablePadding="13dp"
            android:paddingStart="13dp"
            android:drawableTint="#bbb"
            android:drawableLeft="@drawable/ic_videocam_black_24dp"
            android:background="?attr/selectableItemBackground"
            android:text="@string/take_video"
            android:textSize="16sp"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:id="@+id/tv_take_video" />

        <TextView
            android:drawablePadding="13dp"
            android:paddingStart="13dp"
            android:drawableTint="#bbb"
            android:drawableLeft="@drawable/ic_gesture_black_24dp"
            android:background="?attr/selectableItemBackground"
            android:text="@string/sketch"
            android:textSize="16sp"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:id="@+id/tv_sketch" />

    </LinearLayout>

</layout>