<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:paddingTop="15dp">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/inputNameHint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/et_md_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:padding="8dp"
            android:hint="@string/md_text_to_show"
            android:inputType="text"
            android:text=""/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/inputHint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/et_md_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:padding="8dp"
            android:hint="@string/md_link"
            android:inputType="text"
            android:text="http://"/>

    </android.support.design.widget.TextInputLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:paddingBottom="8dp">

        <TextView
            android:id="@+id/tv_md_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:paddingTop="8dp"
            android:textColor="@color/colorAccent"
            android:text="@string/text_confirm"
            android:textSize="15sp"
            android:visibility="visible"/>

        <TextView
            android:id="@+id/tv_md_cancel"
            android:layout_toLeftOf="@id/tv_md_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:paddingTop="8dp"
            android:textColor="@color/colorAccent"
            android:text="@string/text_cancel"
            android:textSize="15sp"/>

    </RelativeLayout>

</LinearLayout>